# pythonenvsetup

./: README.md  pyproject.toml
src/pythonenvsetup/: console.py
src/pythonenvsetup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
