[tool.poetry]
name = "pythonenvsetup"
version = "0.1.0"
description = "The hpyermodern Python project setup"
authors = ["Pankaj Shrestha <pankajshrestha@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pankajshrestha/pythonenvsetup"
repository = "https://github.com/pankajshrestha/pythonenvsetup"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
